Attempt to fix page titles on mobile

--- a/src/app/components/emphasized/emphasized.component.scss
+++ b/src/app/components/emphasized/emphasized.component.scss
@@ -2,6 +2,7 @@
   position: relative;
   text-align: center;
   display: block;
+  height: 4rem;
 
   .fill-line {
     height: 0.1rem;
@@ -16,8 +17,11 @@
 }
 
 :host /deep/ :not(.fill-line) {
-    background: white;
-    display: inline;
-    padding: 0 2rem;
-    margin: 0;
+  transform: translate(-50%, -50%);
+  background: white;
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  padding: 0 2rem;
 }
